--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+html {
+  background-color: #f7f7f7;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
