--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+@media print
+{    
+    .hide-on-print, .hide-on-print *
+    {
+        display: none !important;
+    }
+}
