--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.mw-200 {
+  max-width: 200px;
+}
